// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nullable() should fail 1`] = `
Object {
  "errors": Array [
    Object {
      "message": "At least one validator should succeed: [[Value should equal to null] OR [Value should be a string]]",
      "path": Array [],
      "value": 1,
    },
  ],
  "rootValue": 1,
}
`;

exports[`nullable() should support custom message 1`] = `
Object {
  "errors": Array [
    Object {
      "message": "Custom message",
      "path": Array [],
      "value": undefined,
    },
  ],
  "rootValue": undefined,
}
`;
